Changed the navigation bar to opaque so that the views appear properly

--- a/FoodPiper/Base.lproj/Main.storyboard
+++ b/FoodPiper/Base.lproj/Main.storyboard
@@ -11,8 +11,8 @@
         <scene sceneID="1Y0-c1-QVw">
             <objects>
                 <navigationController id="g8S-KN-vMh" sceneMemberID="viewController">
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="V9O-NW-i3A">
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="V9O-NW-i3A">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
