User can now view multiple pipes using a page view controller

--- a/FoodPiper/ViewPeep.xib
+++ b/FoodPiper/ViewPeep.xib
@@ -6,11 +6,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PeepViewController" customModule="FoodPiper" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="D5D-D4-iiI" id="kLm-C8-q8o"/>
+                <outlet property="view" destination="CMN-JZ-67k" id="L8R-5d-Aiq"/>
             </connections>
         </placeholder>
         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="D5D-D4-iiI">
-            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <point key="canvasLocation" x="-717" y="18"/>
         </scrollView>
@@ -31,7 +31,8 @@
                             <exclude reference="X3g-e3-giB"/>
                         </mask>
                     </variation>
-                    <variation key="heightClass=regular-widthClass=compact">
+                    <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                        <rect key="frame" x="0.0" y="0.0" width="332" height="0.0"/>
                         <mask key="constraints">
                             <include reference="GUO-Ya-JoP"/>
                             <exclude reference="X3g-e3-giB"/>
@@ -159,7 +160,8 @@
                             <exclude reference="tcl-r3-ifs"/>
                         </mask>
                     </variation>
-                    <variation key="heightClass=regular-widthClass=compact">
+                    <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                        <rect key="frame" x="0.0" y="0.0" width="332" height="42"/>
                         <mask key="subviews">
                             <include reference="5s0-Hf-6Oc"/>
                             <include reference="keP-QL-Bxx"/>
@@ -224,7 +226,8 @@
                                     <exclude reference="kIA-fN-GUe"/>
                                 </mask>
                             </variation>
-                            <variation key="heightClass=regular-widthClass=compact">
+                            <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                <rect key="frame" x="0.0" y="0.0" width="111" height="86"/>
                                 <mask key="subviews">
                                     <include reference="GMr-nq-DxD"/>
                                 </mask>
@@ -276,7 +279,8 @@
                                     <exclude reference="Ce4-58-bfb"/>
                                 </mask>
                             </variation>
-                            <variation key="heightClass=regular-widthClass=compact">
+                            <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                <rect key="frame" x="111" y="0.0" width="110" height="86"/>
                                 <mask key="subviews">
                                     <include reference="oNv-bH-dIO"/>
                                 </mask>
@@ -328,7 +332,8 @@
                                     <exclude reference="ZgS-02-J2r"/>
                                 </mask>
                             </variation>
-                            <variation key="heightClass=regular-widthClass=compact">
+                            <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                <rect key="frame" x="221" y="0.0" width="111" height="86"/>
                                 <mask key="subviews">
                                     <include reference="DY5-Q5-vlC"/>
                                 </mask>
@@ -358,7 +363,8 @@
                             <exclude reference="gX1-tP-sB3"/>
                         </mask>
                     </variation>
-                    <variation key="heightClass=regular-widthClass=compact">
+                    <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                        <rect key="frame" x="0.0" y="42" width="332" height="86"/>
                         <mask key="constraints">
                             <include reference="Yed-iP-Kzo"/>
                             <exclude reference="eSn-E2-tS3"/>
@@ -414,7 +420,8 @@
                                     <exclude reference="Zap-eG-lbw"/>
                                 </mask>
                             </variation>
-                            <variation key="heightClass=regular-widthClass=compact">
+                            <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                <rect key="frame" x="0.0" y="0.0" width="111" height="72"/>
                                 <mask key="subviews">
                                     <include reference="CgT-tq-zrn"/>
                                 </mask>
@@ -465,7 +472,8 @@
                                     <exclude reference="Fdf-Jf-xDI"/>
                                 </mask>
                             </variation>
-                            <variation key="heightClass=regular-widthClass=compact">
+                            <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                <rect key="frame" x="111" y="0.0" width="110" height="72"/>
                                 <mask key="subviews">
                                     <include reference="b6C-Lb-2SC"/>
                                 </mask>
@@ -517,7 +525,8 @@
                                     <exclude reference="BTY-Rc-D1x"/>
                                 </mask>
                             </variation>
-                            <variation key="heightClass=regular-widthClass=compact">
+                            <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                <rect key="frame" x="221" y="0.0" width="111" height="72"/>
                                 <mask key="subviews">
                                     <include reference="SIY-3T-T1P"/>
                                 </mask>
@@ -537,7 +546,8 @@
                             <exclude reference="sUD-ni-KXb"/>
                         </mask>
                     </variation>
-                    <variation key="heightClass=regular-widthClass=compact">
+                    <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                        <rect key="frame" x="0.0" y="128" width="332" height="72"/>
                         <mask key="constraints">
                             <exclude reference="sUD-ni-KXb"/>
                         </mask>
